src/test/ui/macros/macro-missing-fragment.stderr
error: missing fragment specifier
  --> $DIR/macro-missing-fragment.rs:2:20
   |
LL |     ( $( any_token $field_dust_type )* ) => {};
   |                    ^^^^^^^^^^^^^^^^

error: aborting due to previous error

