src/test/ui/macros/macro-missing-fragment.ds
macro_rules! m {
    ( $( any_token $field_dust_type )* ) => {}; //~ ERROR missing fragment
}

fn main() {
    m!();
}
